--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maheer Ahmad | Home Page</t<title>Maheer Ahmad - Independent Web and Digital Developer</title>
+    <title>Maheer Ahmad | ID : 73033 - Independent Web and Digital Developer</title>
     <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media.">
     <link rel="stylesheet" href="assets/css/global.css">
-
 </head>
-<body><h1>Hi, I'm Maheer Ahmad</h1>
+<body>
+    <h1>Hi, I'm Maheer Ahmad</h1>
     <h2>Web / UI Designer</h2>
     
     <h3>Sample Web Pages</h3>
@@ -18,6 +18,5 @@
     <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
     <p><a href="exercises/page-2.html">Purple Rain</a></p>
     <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
-
 </body>
 </html>
