--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <title>Maheer Ahmad | ID : 73033 - Independent Web and Digital Developer</title>
     <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media.">
     <link rel="stylesheet" href="assets/css/global.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">  
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">    
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">    
+    <link rel="manifest" href="assets/img/favicon/site.webmanifest">  
+
+
+
 </head>
+
 <body>
     <h1>Hi, I'm Maheer Ahmad</h1>
-    <h2>Web / UI Designer</h2>
+    <h2>Web Designer | App Developer</h2>
     
     <h3>Sample Web Pages</h3>
 
@@ -18,5 +27,10 @@
     <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
     <p><a href="exercises/page-2.html">Purple Rain</a></p>
     <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
+    <p><a href="exercises/page-4.html">Vincent van Gogh</a></p> 
+    <p><a href="exercises/page-5.html">Irish Tourism</a></p> 
+    <p><a href="exercises/page-6.html">Smoothies</a></p> 
+    <p><a href="exercises/page-7.html">Software Analytics</a></p> 
+    <p><a href="exercises/page-8.html">The Box Model</a></p>
 </body>
 </html>
