--- a/index.html
+++ b/index.html
@@ -7,33 +7,53 @@
     <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media.">
     <link rel="stylesheet" href="assets/css/global.css">
 
+    <!-- google fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
+
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">  
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">    
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">    
     <link rel="manifest" href="assets/img/favicon/site.webmanifest">  
-
-
-
 </head>
 
 <body>
-    <h1>Hi, I'm Maheer Ahmad</h1>
-    <h2>Web Designer | App Developer</h2>
+    <!-- Background video section -->
+    <video autoplay loop muted class="background-video">
+        <source src="assets/videos/home-video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     
-    <h3>Sample Web Pages</h3>
+    <video class="background-video" autoplay loop muted src="background-video.mp4"></video>
+<div class="background-overlay"></div>
+<div class="text-container">
+    <!-- Your content here -->
+</div>
+    <!-- Main content area -->
+    <main class="text-container">
+        <h1>Hi, I'm Maheer Ahmad</h1>
+        <h2>Web Designer | App Developer</h2>
+        
+        <h3>Sample Web Pages</h3>
 
-    <p>I created this website to showcase some of my recent web design work.</p> 
+        <p>I created this website to showcase some of my recent web design work.</p>
 
-    <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
-    <p><a href="exercises/page-2.html">Purple Rain</a></p>
-    <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
-    <p><a href="exercises/page-4.html">Vincent van Gogh</a></p> 
-    <p><a href="exercises/page-5.html">Irish Tourism</a></p> 
-    <p><a href="exercises/page-6.html">Smoothies</a></p> 
-    <p><a href="exercises/page-7.html">Software Analytics</a></p> 
-    <p><a href="exercises/page-8.html">The Box Model</a></p>
-    <p><a href="exercises/page-9.html">Web Page With Cards</a></p> 
-    <p><a href="exercises/page-10.html">Web Page With Fonts</a></p>
-
+        <ul>
+            <li><a href="exercises/page-1.html">A Tale of Two Cities</a></li>
+            <li><a href="exercises/page-2.html">Purple Rain</a></li>
+            <li><a href="exercises/page-3.html">Web Page with Sections</a></li>
+            <li><a href="exercises/page-4.html">Vincent van Gogh</a></li>
+            <li><a href="exercises/page-5.html">Irish Tourism</a></li>
+            <li><a href="exercises/page-6.html">Smoothies</a></li>
+            <li><a href="exercises/page-7.html">Software Analytics</a></li>
+            <li><a href="exercises/page-8.html">The Box Model</a></li>
+            <li><a href="exercises/page-9.html">Web Page With Cards</a></li>
+            <li><a href="exercises/page-10.html">Web Page With Fonts</a></li>
+            <li><a href="exercises/hero-text.html">Hero block with animated text</a></li>
+            <li><a href="exercises/hero-image.html">Hero block with background image</a></li>
+            <li><a href="exercises/hero-video.html">Hero block with background video</a></li>
+        </ul>
+    </main>
 </body>
 </html>
