--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Maheer Ahmad 73033 -->
     <meta charset="UTF-8">
     <meta name="robots" content="noindex">
     <title>Maheer Ahmad | ID : 73033 |Purple Rain</title>
