--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- Maheer Ahmad 73033 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maheer Ahmad | ID : 73033 |Sample Web Page with Sections</title>
